--- a/Index.html
+++ b/Index.html
@@ -96,4 +96,38 @@
             <div class="question">
                 <h2>8… Do you prefer to give pleasure or receive it?</h2>
                 <div class="options">
-                    <label class="option-label ​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+                    <label class="option-label"><input type="radio" name="q8" value="give" required> Give pleasure</label>
+                    <label class="option-label"><input type="radio" name="q8" value="receive"> Receive pleasure</label>
+                </div>
+            </div>
+
+            <!-- Question 9 -->
+            <div class="question">
+                <h2>9… Who do you want to wear the pants?</h2>
+                <div class="options">
+                    <label class="option-label"><input type="radio" name="q9" value="in-control" required> I like to be in control</label>
+                    <label class="option-label"><input type="radio" name="q9" value="partner-control"> I want my partner to take control</label>
+                    <label class="option-label"><input type="radio" name="q9" value="dominant-streets"> I’m dominant in the streets & submissive in the sheets</label>
+                    <label class="option-label"><input type="radio" name="q9" value="submissive-streets"> I’m submissive in the streets & dominant in the sheets</label>
+                    <label class="option-label"><input type="radio" name="q9" value="switch-it-up"> I like to switch it up</label>
+                </div>
+            </div>
+
+            <!-- Question 10 -->
+            <div class="question">
+                <h2>10… Feeling frisky? Want to audition to be a star in our reality dating show?</h2>
+                <div class="options">
+                    <label class="option-label"><input type="radio" name="q10" value="ready" required> Let’s do it! I’m ready for my close-up</label>
+                    <label class="option-label"><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
+                </div>
+            </div>
+
+            <button type="submit">Submit</button>
+        </form>
+
+        <div id="result" class="result"></div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
