--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Check All My Boxes</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts for Dancing Script (title/subheader) and Broadway (questions/answers) -->
+    <!-- Google Fonts for Dancing Script (header) and Broadway (subheader, questions/answers) -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Broadway&display=swap" rel="stylesheet">
 </head>
 <body style="background-color: #4A0000;">
@@ -14,7 +14,7 @@
         <div class="header">
             <img id="logo" src="logo-placeholder.png" alt="Logo Placeholder" style="display: none;">
             <h1 style="font-family: 'Dancing Script', cursive; color: white; text-shadow: 0 0 5px #FF69B4, 0 0 10px #FF69B4, 0 0 15px #FF69B4;">You Check All My Boxes: The 1st In-Person Dating App</h1>
-            <h3 style="font-family: 'Dancing Script', cursive; color: white;">(Answer 10 quick questions, and uncover who you have sexual chemistry with - 100% private, & anonymous)</h3>
+            <h3 style="font-family: 'Broadway', sans-serif; font-style: italic; color: white;">(Answer 10 quick questions, and uncover who you have sexual chemistry with - 100% private, & anonymous)</h3>
         </div>
 
         <form id="questionnaire-form">
