--- a/Index.html
+++ b/Index.html
@@ -14,4 +14,117 @@
         <div class="header">
             <img id="logo" src="logo-placeholder.png" alt="Logo Placeholder" style="display: none;">
             <h1 style="font-family: 'Dancing Script', cursive; color: white; text-shadow: 0 0 5px #FF69B4, 0 0 10px #FF69B4, 0 0 15px #FF69B4;">You Check All My Boxes: The 1st In-Person Dating App</h1>
-            <h3 style="font-family: 'Broadway', sans-serif; font-style: italic; color: white;">(Answer 10 quick questions, and ​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+            <h3 style="font-family: 'Broadway', sans-serif; font-style: italic; color: white;">(Answer 10 quick questions, and uncover who you have sexual chemistry with - 100% private, & anonymous)</h3>
+        </div>
+
+        <form id="questionnaire-form">
+            <!-- Question 1 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">1… Do you prefer to make the first move or get approached?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q1" value="make-first-move" required> I want to make the first move</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q1" value="get-approached"> I want to get approached</label>
+                </div>
+            </div>
+
+            <!-- Question 2 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">2… Are you looking for love or a good time?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q2" value="love" required> Love</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q2" value="evolve-naturally"> Either one, I like to let things evolve naturally</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q2" value="good-time"> A good time</label>
+                </div>
+            </div>
+
+            <!-- Question 3 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">3… Which vibe turns you on the most?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q3" value="blue-room" required> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q3" value="green-room"> One-night stands | giving/receiving a striptease or lap dance | watching porn together | sexy role-play | experimenting with new sex toys</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q3" value="red-room"> Power exchange | rough sex | spanking | BDSM | naughty mind games | filthy dirty talk</label>
+                </div>
+            </div>
+
+            <!-- Question 4 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">4… Are you comfortable with PDA (public displays of affection)?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q4" value="yes" required> Yes</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q4" value="only-a-little"> Only a little</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q4" value="no"> No</label>
+                </div>
+            </div>
+
+            <!-- Question 5 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">5… Are you looking for a sugar daddy/momma?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q5" value="yes" required> Yes</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q5" value="no-thank-you"> No thank you</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q5" value="i-am-sugar"> Are you kidding? I am the sugar daddy/momma!</label>
+                </div>
+            </div>
+
+            <!-- Question 6 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">6… Do you like to be the center of attention?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q6" value="flaunt-it" required> Yes, like they say, “if you got it, flaunt it.”</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q6" value="partner-shine"> Yes, but I prefer to let my partner shine</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q6" value="no-spotlight"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q6" value="blend-in"> No, I’d rather my partner and I blend in</label>
+                </div>
+            </div>
+
+            <!-- Question 7 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">7… Would you enjoy a threesome?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q7" value="mine-only" required> No I’d like my partner to be mine & only mine</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q7" value="consider-it"> Maybe, I’d consider it</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q7" value="fun"> Yeah it’d be fun</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q7" value="more-the-merrier"> Hell yeah! Why stop at 3? The more the merrier</label>
+                </div>
+            </div>
+
+            <!-- Question 8 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">8… Do you prefer to give pleasure or receive it?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q8" value="give" required> Give pleasure</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q8" value="receive"> Receive pleasure</label>
+                </div>
+            </div>
+
+            <!-- Question 9 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">9… Who do you want to wear the pants?</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q9" value="in-control" required> I like to be in control</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q9" value="partner-control"> I want my partner to take control</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q9" value="dominant-streets"> I’m dominant in the streets & submissive in the sheets</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q9" value="submissive-streets"> I’m submissive in the streets & dominant in the sheets</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q9" value="switch-it-up"> I like to switch it up</label>
+                </div>
+            </div>
+
+            <!-- Question 10 -->
+            <div class="question">
+                <h2 style="font-family: 'Broadway', sans-serif; color: white;">10… Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</h2>
+                <div class="options">
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q10" value="ready" required> Let’s do it! I’m ready for my close-up</label>
+                    <label class="option-label" style="font-family: 'Broadway', sans-serif; color: white;"><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
+                </div>
+            </div>
+
+            <button type="submit" style="font-family: 'Broadway', sans-serif; color: white;">Submit</button>
+        </form>
+
+        <div id="result" class="result" style="font-family: 'Broadway', sans-serif; color: white;"></div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
