--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The 1st In-Person Dating App</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts: Orbitron and Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Google Fonts: Exo 2 and Montserrat -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="questionnaire-container">
